crates/nargo_cli/tests/compile_tests_data/fail/if_typeck.nr
fn f() {}

fn main() {
    if f {}
}
